# EHN

./: .gitignore  README.md
Prac1/: 1.txt  CMakeLists.txt  Client.c  Client.h  Readme.txt  Server.c  Server.h  client.c  dox_prac1  main.c  makefile  refman.tex  webpage_1.txt
Prac1/Compiled/: Client  Server
Prac1/Ivan/: CMakeLists.txt  client.c  main.c
Prac1/Ivan/Media_files/: Hello_world.html  files_list.html  test.html
Prac1/Ivan/keys/: cert.crt  cert.key  cert.srl  webServ.key  webServCert.crt  webServReq.csr
Prac1/Media_files/: files_list.html  home.html  index.html
Prac1/keys/: cert.crt  cert.key  cert.p12  cert.srl  webServ.key
Prac2/: AES  AES.c  AES.h  CMakeLists.txt  Encryption.c  Encryption.h  README.md  dox_prac2  makefile
Prac3/: CMakeLists.txt  README.md  dox_prac3  makefile  prac3.c  prac3.h  rc4.c  rc4.h  rsadecrypt.c  rsadecrypt.h  rsaencrypt.c  rsaencrypt.h  rsakeygen.c  rsakeygen.h
